feat: add face auth
